[package]
name = "panic-tracing-rtt"
version = "0.1.0"
edition = "2021"
authors = [
    "jankincai <jankincai12@gmail.com>",
]
description = "The is a tracing-rtt embedded library."
repository = "https://github.com/caizhengxin/tracing-rtt"
homepage = "https://github.com/caizhengxin/tracing-rtt"
readme = "README.md"
categories = [
    "development-tools",
]
keywords = [
    "tracing-rtt",
    "pnaic-tracing-rtt",
]
license = "MIT OR Apache-2.0"
include = [
    "src/*",
    "benches/*",
    "examples/*",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
tracing-rtt = { path = "../", version = "0", default-features = false, features = ["heapless"] }
tracing = { version = "0.1", default-features = false }
