[package]
name = "embedded-rtt"
version = "0.1.0"
edition = "2021"

[dependencies]
panic-halt = "0.2"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
stm32f4xx-hal = { version = "0.21", features = ["stm32f407"] }
embedded-alloc = "0.5"
tracing = { version = "0.1", default-features = false }
tracing-rtt = { path = "../../", version = "0", default-features = false }
rand_core = "0.6"
